--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
-        android:label="mine_profile"
+        android:label="MineProfile"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
