--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ flutter:
   assets:
     - assets/
     - assets/launcher_icon/
+    - assets/servers/
+    - assets/rive/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
