--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,24 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  flutter_launcher_icons:
+#  flutter_launcher_icons:
+  icons_launcher:
 
-flutter_launcher_icons:
-  image_path: "assets/launcher_icon/app_icon.webp"
-  android: true
-  min_sdk_android: 21 # android min sdk min:16, default 21
-  adaptive_icon_background: "#ffffff"
+#flutter_launcher_icons:
+#  image_path: "assets/launcher_icon/app_icon.webp"
+#  android: true
+#  min_sdk_android: 21 # android min sdk min:16, default 21
+icons_launcher:
+  image_path: 'assets/launcher_icon/ic_logo_border.png'
+  platforms:
+    android:
+      enable: true
+      image_path: 'assets/launcher_icon/ic_logo_border.png'
+      # adaptive_background_color: '#ffffff'
+      adaptive_background_image: 'assets/launcher_icon/ic_background.png'
+      adaptive_foreground_image: 'assets/launcher_icon/ic_foreground.png'
+      adaptive_round_image: 'assets/launcher_icon/ic_logo_round.png'
+      adaptive_monochrome_image: 'assets/launcher_icon/ic_logo_monochrome.png'
 
 flutter:
   uses-material-design: true
